...
          ),
        }}
      />
      <Tabs.Screen
        name="activities"
        options={{
          title: 'Activities',
          tabBarIcon: ActivitiesTabIcon,
        }}
      />
      <Tabs.Screen
        name="todo"
        options={{
...
